@@ -1,3 +1,5 @@
+  - Add a site-specific extractor for new.ctv.com.tw
+
 v0.26.0 2020-07-03T18:13:05+0800
   - Adjust the dateline output
 
